k8s-manifests/examples/canary-deployment/canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotconfig-primary
  namespace: default
  labels:
    app: dotconfig
    version: primary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dotconfig
      version: primary
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/metrics"
      labels:
        app: dotconfig
        version: primary
    spec:
      containers:
      - name: dotconfig
        image: yurikrupnik/dotconfig:v1.0
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
