k8s-manifests/examples/canary-deployment/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: dotconfig-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dotconfig-vs
  namespace: default
spec:
  hosts:
    - "*"
  gateways:
    - dotconfig-gateway
  http:
  - match:
    - uri:
        prefix: /api/v1/
    rewrite:
      uri: /
    route:
    - destination:
        host: dotconfig
        port:
          number: 8080
    timeout: 3s
    retries:
      attempts: 3
      retryOn: 5xx,connect-failure,refused-stream
      perTryTimeout: 2s
    fault:
      delay:
        percentage:
          value: 0.05
        fixedDelay: 100ms
  - route:
    - destination:
        host: dotconfig
        port:
          number: 8080
